--- a/angular.json
+++ b/angular.json
@@ -7,10 +7,11 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true,
+          "changeDetection": "OnPush",
+          "displayBlock": true,
           "style": "scss",
-          "skipTests": true
+          "skipTests": true,
+          "prefix": ""
         },
         "@schematics/angular:class": {
           "skipTests": true
@@ -47,13 +48,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/shared/styles"]
+            },
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
