--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular-devkit/build-angular": "14.2.5",
     "@angular/cli": "14.2.5",
     "@angular/compiler-cli": "14.2.5",
+    "angular-cli-ghpages": "1.0.3",
     "typescript": "4.7.4"
   }
 }
